# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "cargo-phper"
version = "0.0.0"
edition = "2021"
authors = ["PHPER Framework Team", "jmjoy <jmjoy@apache.org>"]
rust-version = "1.56"
description = "[WIP] The Cargo command for phper."
repository = "https://github.com/phper-framework/cargo-phper"
documentation = "https://docs.rs/cargo-phper"
license = "MulanPSL-2.0"
readme = "README.md"
keywords = ["php", "binding", "extension", "module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
